# core

./: .clang-format  .clang-tidy  .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TEST_SUMMARY.md  THIRD_PARTY_NOTICES.md  UPGRADING.md  mlir-quantum-dialect.md  noxfile.py  prompt.md  pyproject.toml  sitecustomize.py  test.mlir
bindings/: .clang-tidy  CMakeLists.txt  generate-stubs.sh  patterns.txt
bindings/dd/: CMakeLists.txt  register_dd.cpp  register_dd_package.cpp  register_matrix_dds.cpp  register_vector_dds.cpp
bindings/fomac/: CMakeLists.txt  fomac.cpp  patterns.txt
bindings/ir/: CMakeLists.txt  register_ir.cpp  register_operations.cpp  register_permutation.cpp  register_quantum_computation.cpp  register_registers.cpp  register_symbolic.cpp
bindings/ir/operations/: register_classic_controlled_operation.cpp  register_compound_operation.cpp  register_control.cpp  register_if_else_operation.cpp  register_non_unitary_operation.cpp  register_operation.cpp  register_optype.cpp  register_standard_operation.cpp  register_symbolic_operation.cpp
bindings/ir/symbolic/: register_expression.cpp  register_term.cpp  register_variable.cpp
bindings/mlir/: .clang-tidy  CMakeLists.txt  patterns.txt  register_mlir.cpp
bindings/na/: CMakeLists.txt  register_fomac.cpp  register_na.cpp  register_qdmi.cpp
bindings/na/fomac/: CMakeLists.txt  fomac.cpp
bindings/qdmi/: CMakeLists.txt  fomac.cpp  qdmi.cpp
bindings/qdmi/fomac/: CMakeLists.txt  fomac.cpp
mlir/: .clang-tidy  CMakeLists.txt
mlir/include/: CMakeLists.txt
mlir/include/mlir/: CMakeLists.txt
mlir/include/mlir-c/: Dialects.h
mlir/include/mqt-core-c/: Dialects.h  Registration.h
mlir/lib/: CMakeLists.txt
mlir/lib/CAPI/: .clang-tidy  CMakeLists.txt  Dialects.cpp  Registration.cpp
mlir/lib/Compiler/: CMakeLists.txt  CompilerPipeline.cpp  Programs.cpp  Qdmi.cpp
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Passes/: CMakeLists.txt  GateDecompositionPass.cpp
mlir/lib/Support/: CMakeLists.txt  IRVerification.cpp  Passes.cpp  PrettyPrinting.cpp  Qdmi.cpp  SuperconductingDevice.cpp  TestUtils.cpp
mlir/lib/Translation/: CMakeLists.txt  Translation.cpp
mlir/plugins/catalyst/: CMakeLists.txt  __init__.py  pyproject.toml
mlir/python/: CMakeLists.txt  MQTCoreMLIRModule.cpp  MQTCoreModule.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/test/Conversion/: mqtdyn-to-mqtopt.mlir  mqtdyn-to-qir.mlir  mqtopt-to-mqtdyn.mlir  mqtopt-to-mqtref.mlir  mqtopt-to-qir.mlir  mqtopt.mlir  mqtopt_GHZ.mlir  mqtref-to-mqtopt.mlir  mqtref-to-qir.mlir  qir-to-mqtdyn.mlir  qir-to-mqtref.mlir  quantum.mlir  quantum_GHZ.mlir  test.mlir
mlir/test/Plugin/: mqtopt_GHZ.mlir
mlir/test/Translation/: CMakeLists.txt
mlir/tools/: CMakeLists.txt
mlir/tools/catalyst-plugin/: CMakeLists.txt  mqt-plugin.cpp
mlir/tools/mqt-cc/: CMakeLists.txt  mqt-cc.cpp
mlir/tools/mqt-cc-translate/: CMakeLists.txt  mqt-cc-translate.cpp
mlir/tools/mqt-plugin/: CMakeLists.txt  mqt-plugin.cpp
mlir/tools/quantum-opt/: CMakeLists.txt  quantum-opt.cpp
mlir/unittests/: CMakeLists.txt  TestCaseUtils.h
mlir/unittests/Compiler/: CMakeLists.txt  test_compiler_pipeline.cpp
mlir/unittests/Conversion/: CMakeLists.txt
mlir/unittests/Dialect/: CMakeLists.txt
mlir/unittests/Passes/: CMakeLists.txt
mlir/unittests/conversion/: CMakeLists.txt  test_conversion.cpp
mlir/unittests/decomposition/: CMakeLists.txt  test_basis_decomposer.cpp  test_euler_decomposition.cpp  test_helpers.cpp  test_unitary_matrices.cpp  test_weyl_decomposition.cpp
mlir/unittests/dialect/: CMakeLists.txt  test_wireiterator.cpp
mlir/unittests/pipeline/: CMakeLists.txt  test_compiler_pipeline.cpp
mlir/unittests/programs/: CMakeLists.txt  qasm_programs.cpp  qasm_programs.h  qc_programs.cpp  qc_programs.h  qco_programs.cpp  qco_programs.h  qir_base_programs.cpp  qir_base_programs.h  qir_programs.cpp  qir_programs.h  quantum_computation_programs.cpp  quantum_computation_programs.h
mlir/unittests/translation/: CMakeLists.txt  test_translation.cpp
mlir/unittests/translation_new/: CMakeLists.txt  test_translation.cpp
plugins/: CMakeLists.txt
plugins/catalyst/: .clang-tidy  CMakeLists.txt  README.md  pyproject.toml
plugins/catalyst/cmake/: ExternalDependencies.cmake
plugins/catalyst/lib/: CMakeLists.txt  mqt-plugin.cpp
plugins/catalyst/python/: pyproject.toml
plugins/catalyst/src/: CMakeLists.txt  mqt-plugin.cpp
plugins/catalyst/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
plugins/quake/: CMakeLists.txt  dev.Dockerfile
plugins/quake/include/: CMakeLists.txt
plugins/quake/lib/: CMakeLists.txt  mqtQuakePlugin.cpp
plugins/quake/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
plugins/quake/tools/: CMakeLists.txt
poc/: CMakeLists.txt  test_pipeline.cpp
src/nlohmann_json/: CMakeLists.txt
src/qdmi/: CMakeLists.txt  Common.cpp  Device.cpp  DeviceApi.cpp  DeviceApi.hpp  DeviceManager.cpp  DeviceRegistry.cpp  DeviceState.cpp  DeviceState.hpp  Driver.cpp  FoMaC.cpp  V1DeviceApi.cpp  V1DeviceApi.hpp  driver.cpp
src/qdmi/common/: CMakeLists.txt  Common.cpp
src/qdmi/dd/: CMakeLists.txt  Device.cpp
src/qdmi/devices/: CMakeLists.txt
src/qdmi/driver/: CMakeLists.txt  DeviceRegistry.cpp  DeviceRegistry.hpp  Driver.cpp
src/qdmi/na/: App.cpp  CMakeLists.txt  Device.cpp  Generator.cpp
src/qdmi/sc/: App.cpp  CMakeLists.txt  Device.cpp  DynDevice.cpp  Generator.cpp
src/qir/: .clang-tidy  CMakeLists.txt  QIR.cpp  QIR_DD_Backend.cpp  qir_backend.cpp  qir_dd_backend.cpp
src/qir/backend/: Backend.cpp  CMakeLists.txt  QIR.cpp  QIR_DD_Backend.cpp
src/qir/jit/: CMakeLists.txt  IRRewriter.cpp  Session.cpp
src/qir/runner/: CMakeLists.txt  Runner.cpp
src/qir/runtime/: CMakeLists.txt  QIR.cpp  Runtime.cpp
src/qir/tool/: App.cpp  CMakeLists.txt
test/qir/: BellPairDynamic.ll  BellPairStatic.ll  CMakeLists.txt  GHZ4Dynamic.ll  test_qir_backend.cpp
(+2188 files in other folders)
