# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

add_subdirectory(MQTOptToMQTRef)
add_subdirectory(MQTRefToMQTOpt)
add_subdirectory(MQTRefToQIR)
add_subdirectory(QIRToMQTRef)
add_subdirectory(FluxToQuartz)
add_subdirectory(QuartzToFlux)
add_subdirectory(QuartzToQIR)
